5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1679_1100.log
== TEST (2019-04-25 17:38:45) 
-- CODE:
int(input("2,5,10,20,50,100")
-- ERROR:
File "XXXX", line 2
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:40:08) 
-- CODE:
valordacedula: int(input("2,5,10,20,50,100")
						 
	 
-- ERROR:
File "XXXX", line 4
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:40:24) 
-- CODE:
valor: int(input("2,5,10,20,50,100")
						 
	 
-- ERROR:
File "XXXX", line 4
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:45:11) 
-- CODE:
valor: int(input("Entradas:")
print()
						 
	 
-- ERROR:
File "XXXX", line 2
    print()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 09:48:23) 
-- CODE:
valor: int(input("Entradas:")
print("Entradas:", valor)
						 
	 
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 09:49:56) 
-- CODE:
valor: int(input("Entradas:")
print("Entradas:", valor)
if(valor==2):
print("Animal: Tartaruga")
						 
	 
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 09:55:52) 
-- CODE:
valor: int(input("Entradas: ")
print("Entradas:", valor)
if(valor==2):
print("Animal: Tartaruga")
elif(valor==5):
print("Animal: Garca")
elif(valor==10):
print("Animal: Arara")
elif(valor==50)or(valor==100):
print("Animal: Garoupa")
						 
	 
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 09:56:59) 
-- CODE:
valor: int(input("Entradas: ")
print("Entradas:", valor)
if(valor==2):
print("Animal: Tartaruga")
elif(valor==5):
print("Animal: Garca")
elif(valor==10):
print("Animal: Arara")
elif(valor==50)or(valor==100):
print("Animal: Garoupa")
else:
print("Animal: Invalido")
						 
	 
-- EXECUTION TIME:
0.20219
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 1
    valor: int(input()
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 09:57:00) 
-- CODE:
valor: int(input("Entradas: ")
print("Entradas:", valor)
if(valor==2):
print("Animal: Tartaruga")
elif(valor==5):
print("Animal: Garca")
elif(valor==10):
print("Animal: Arara")
elif(valor==50)or(valor==100):
print("Animal: Garoupa")
else:
print("Animal: Invalido")
						 
	 
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 09:57:30) 
-- CODE:
valor: int(input("Entradas: ")
print("Entradas:", valor)
if(valor==2):
  print("Animal: Tartaruga")
elif(valor==5):
  print("Animal: Garca")
elif(valor==10):
  print("Animal: Arara")
elif(valor==50)or(valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")
						 
	 
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 09:57:33) 
-- CODE:
valor: int(input("Entradas: ")
print("Entradas:", valor)
if(valor==2):
  print("Animal: Tartaruga")
elif(valor==5):
  print("Animal: Garca")
elif(valor==10):
  print("Animal: Arara")
elif(valor==50)or(valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")
						 
	 
-- EXECUTION TIME:
0.155727
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 1
    valor: int(input()
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 09:58:28) 
-- CODE:
valor: int(input("Entradas: ")
print("Entradas:", valor)
if (valor==2):
  print("Animal: Tartaruga")
elif (valor==5):
  print("Animal: Garca")
elif (valor==10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")
						 
	 
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 09:59:13) 
-- CODE:
valor: int(input("Entradas: ")
print("Entradas:", valor)
if (valor==2):
  print("Animal: Tartaruga")
elif (valor==5):
  print("Animal: Garca")
elif (valor==10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 09:59:19) 
-- CODE:
valor: int(input("Entradas: ")
print("Entradas:", valor)
if (valor==2):
  print("Animal: Tartaruga")
elif (valor==5):
  print("Animal: Garca")
elif (valor==10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- EXECUTION TIME:
0.137354
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 1
    valor: int(input()
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:00:42) 
-- CODE:
valor: int(input("Entradas: ")
print("Entradas:", valor)
if (valor==2):
  print("Animal: Tartaruga")
elif (valor==5):
  print("Animal: Garca")
elif (valor==10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:00:53) 
-- CODE:
valor= int(input("Entradas: ")
print("Entradas:", valor)
if (valor==2):
  print("Animal: Tartaruga")
elif (valor==5):
  print("Animal: Garca")
elif (valor==10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:01:21) 
-- CODE:
valor = int(input("Entradas: ")
print("Entradas:", valor)
if (valor==2):
  print("Animal: Tartaruga")
elif (valor==5):
  print("Animal: Garca")
elif (valor==10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:01:26) 
-- CODE:
valor = int(input("Entradas: ")
 print("Entradas:", valor)
if (valor==2):
  print("Animal: Tartaruga")
elif (valor==5):
  print("Animal: Garca")
elif (valor==10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:01:31) 
-- CODE:
valor = int(input("Entradas: ")
     print("Entradas:", valor)
if (valor==2):
  print("Animal: Tartaruga")
elif (valor==5):
  print("Animal: Garca")
elif (valor==10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas:", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:01:45) 
-- CODE:
valor = int(input("Entradas: ")
     print("Entradas: ", valor)
if (valor==2):
  print("Animal: Tartaruga")
elif (valor==5):
  print("Animal: Garca")
elif (valor==10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas: ", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:03:17) 
-- CODE:
valor = int(input("Entradas: ")
print("Entradas: ", valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas: ", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:04:23) 
-- CODE:
valor = int(input("Entradas: ")
print("Entradas: ", valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas: ", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 10:04:25) 
-- CODE:
valor = int(input("Entradas: ")
print("Entradas: ", valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- EXECUTION TIME:
0.14918
-- ERROR:
  File "/home/codebench/codes/1679/1100/main.py", line 2
    print("Entradas: ", valor)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:04:36) 
-- CODE:
valor = int(input("Entradas: ")
print("Entradas: ", valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas: ", valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:04:49) 
-- CODE:
valor = int(input("Entradas: ")
print("Entradas: ",valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas: ",valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:04:57) 
-- CODE:
valor = int(input("Entradas: ")
print("Entradas:" ,valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas:" ,valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:06:16) 
-- CODE:
valor = int(input("Entradas: ")
print("Entradas:" ,valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- ERROR:
File "XXXX", line 2
    print("Entradas:" ,valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:06:39) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:06:52) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 10:06:56) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- EXECUTION TIME:
0.170116
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:07:02) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 10:07:06) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- EXECUTION TIME:
0.170105
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:07:08) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:08:14) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
  print("Animal: Tartaruga")
elif (valor == 5):
  print("Animal: Garca")
elif (valor == 10):
  print("Animal: Arara")
elif(valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor==50) or (valor==100):
  print("Animal: Garoupa")
else:
  print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:08:30) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
   print("Animal: Tartaruga")
elif (valor == 5):
   print("Animal: Garca")
elif (valor == 10):
   print("Animal: Arara")
elif(valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor==50) or (valor==100):
   print("Animal: Garoupa")
else:
   print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 10:08:34) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
   print("Animal: Tartaruga")
elif (valor == 5):
   print("Animal: Garca")
elif (valor == 10):
   print("Animal: Arara")
elif(valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor==50) or (valor==100):
   print("Animal: Garoupa")
else:
   print("Animal: Invalido")						  
-- EXECUTION TIME:
0.160218
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entradas: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entradas: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entradas: 50
Animal: Garoupa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:08:44) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
   print("Animal: Tartaruga")
elif (valor == 5):
   print("Animal: Garca")
elif (valor == 10):
   print("Animal: Arara")
elif(valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor==50) or (valor==100):
   print("Animal: Garoupa")
else:
   print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:09:05) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
   print("Animal: Tartaruga")
elif (valor == 5):
   print("Animal: Garca")
elif (valor == 10):
   print("Animal: Arara")
elif(valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50) or (valor == 100):
   print("Animal: Garoupa")
else:
   print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:09:09) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
   print("Animal: Tartaruga")
elif (valor == 5):
   print("Animal: Garca")
elif (valor == 10):
   print("Animal: Arara")
elif(valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50) or (valor == 100):
   print("Animal: Garoupa")
else:
   print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:09:13) 
-- CODE:
valor = int(input("Entradas: "))
print("Entradas:" ,valor)
if (valor == 2):
   print("Animal: Tartaruga")
elif (valor == 5):
   print("Animal: Garca")
elif (valor == 10):
   print("Animal: Arara")
elif(valor == 20):
	print("Animal: Mico-leao-dourado")
elif (valor == 50) or (valor == 100):
   print("Animal: Garoupa")
else:
   print("Animal: Invalido")						  
-- OUTPUT:
Entradas: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 10:13:20) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)	  
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 10:13:23) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)	  
-- EXECUTION TIME:
0.125339
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:36:09) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)	  
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:36:23) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)	  
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:36:35) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)	  
-- EXECUTION TIME:
0.144067
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:40:36) 
-- CODE:
cedula = int(input("cedula:"))
print("Entrada:", cedula)

if (cedula ==  2):
	animal = ' Animal: Tartaruga'
elif (cedula == 5):
	animal  = 'Animal: Garca'
elif (cedula == 10):
	animal = 'Animal: Arara'
elif (cedula == 20):
	animal = 'Animal: Mico-leao-dourado'
elif (cedula == 50):
	animal = 'Animal: Onca-pintada'
elif (cedula == 100):
	animal = 'Animal: Garoupa'
else:	
	animal = 'Animal: Invalido'
print(animal)	  
-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
